<resources>


    <string name="app_name">Collekt It</string>
    <string name="app_name_m">COLLEKT IT</string>
    <string name="title_profil">Profil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_autorisation">Autorisations</string>

    <string name="suivant">Suivant</string>
    <string name="quitter">Quitter</string>
    <string name="terminer">Terminer</string>
    <string name="retour">Retour</string>

    <string name="slide_1_title">Configurer  les paramètres du serveur!</string>
    <string name="slide_1_desc">Javatpoint is passionate to offer better technical content to the world.</string>

    <string name="slide_2_title">Android</string>
    <string name="slide_2_desc"></string>
    <string name="buttom_authorization">Obtenir l \'authorisation</string>
    <string name="buttom_valide">Valider</string>
    <string name="text_select_type_user">Sélectionnez le type d\'utilisateur </string>
    <string name="pop_cancel">Annuler</string>
    <string name="pop_valider">Valider</string>
    <string name="txt_welcome">Bienvenue</string>
    <string name="txt_username">Nom d\'utilisateur</string>
    <string name="txt_password">Mot de passe</string>
    <string name="txt_btn_login">Se connecter</string>
    <string name="txt_info_ac">Information de l\'AC</string>
    <string name="txt_ac_identification">Identifiant</string>
    <string name="txt_ac_name">Nom</string>
    <string name="txt_ac_first_name">Username</string>
    <string name="txt_ac_zone">Zone d\'affectations</string>
    <string name="text_select_zone">Zone</string>
    <string name="text_nouveau_pass">Nouveau mot de passe</string>
    <string name="text_confirm_pass">Confirmer mot de passe</string>
    <string name="text_ancien_pass">Mot de passe actuel</string>
    <string name="text_change_secret">Veuillez cliquer sur un bouton</string>
    <string name="text_pin">Pin</string>

    <string name="title_recuperation">Recuperation</string>

    <string name="success_sync">La synchronisation a été effectuée avec succès</string>
    <string name="error_sync">erreur la synchronisation a échoué veuillez vérifier votre connexion</string>
    <string name="error_select_type_user">Veuillez sélectionner un type d\'utilisateur</string>
    <string name="error_address">Veuillez renseigner le champ adresse</string>
    <string name="error_password_reset">Veuillez renseigner les champs que vous souhaitez modifier</string>
    <string name="error_address_correct">Veuillez verifier votre adresse</string>
    <string name="error_auth">Vous n\'êtes pas encore autorisé</string>
    <string name="error_incorrect_pin">Code pin incorrect</string>
    <string name="error_incorrect_pass">Mot de passe incorrect</string>
    <string name="error_incorrect_conf">Mot de passe non conforme</string>
    <string name="pop_up_creer_cycle">Ce client ne possède pas de cycle.\nSouhaitez-vous lui en créer?</string>
    <string name="pop_up_confirmer_pin">Confirmer l\'action avec votre pin</string>
    <string name="pop_up_fin_cycle">Ce montant de collecte va cloturer le cycle.\nSouhaitez-vous continuer?</string>

    <string name="button_recup">Recuperer données</string>
    <string name="button_recup_all">Recuperer toutes les données</string>
    <string name="button_synchro">Synchronisation</string>
    <string name="recuperation_reuissie">Recuperation effectuée avec succès</string>
    <string name="recuperation_en_cours">Recuperation en cours...</string>
    <string name="synchronisation_en_cours">Synchronisation en cours...</string>
    <string name="error_no_data_for_sync">Vous n\'avez aucune donnée à synchroniser</string>
    <string name="error_no_data">Erreur d\'accès aux données</string>
    <string name="error_sync_first">Erreur de synchonisation </string>
    <string name="error_conf">Erreur de configuration veuillez réessayer </string>
    <string name="success_sync_first">synchonisation </string>

    <string name="select_type_produit">Sélectionnez le type de produit</string>

    <string name="txt_pin">Taper votre code pin</string>
    <string name="text_select_zones">Sélectionnez la zone</string>
    <string name="text_select_date_start">Début</string>
    <string name="text_select_date_end">Fin</string>
    <string name="text_change_password">Changer mot de passe</string>
    <string name="text_change_pin">Changer code pin</string>
    <string name="text_disconnect">Déconnexion</string>
    <string name="text_title_disconnect">Voulez-vous vraiment vous déconnecter?</string>
    <string name="text_yes_disconnect">OUI</string>
    <string name="text_no_disconnect">NON</string>
    <string name="text_validation_cycle">Validation de cycle</string>
    <string name="text_valide_cycle">Voullez-vous valider ce cycle ?</string>
    <string name="valide_cycle">Enoyer vers le serveur</string>
    <string name="login_error">Non d\'utilisateur ou mot de passe incorrect !</string>

    <string name="select_type_zone">Sélectionnez la zone</string>
    <string name="txt_info_cycle">Information monétaire du cycle</string>
    <string name="txt_somme_collecte_cy">Somme des collectes</string>
    <string name="txt_somme_mise_retrait">Somme des mises</string>
    <string name="txt_montant_retrait">Montant du retrait</string>
    <string name="autoriser_equipement">Autoriser Equipement</string>

    <string name="notification_title">Demande d\'autorisation d\'equipement</string>
    <string name="notification_content">Souhaitez vous donner l\'autorisation à l\'agent commercile</string>

</resources>