<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.perfekxia.collekt_it.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.perfekxia.collekt_it.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_recuperation"
        android:name="com.perfekxia.collekt_it.ui.recuperation.RecuperationFragment"
        android:label="@string/title_recuperation"
        tools:layout="@layout/fragment_recuperation" />
</navigation>