<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_change_secret"
                android:textColor="@android:color/black"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radioPassword"
                    android:layout_width="wrap_content"
                    android:layout_height ="wrap_content"
                    android:text="@string/text_change_password"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="12dp"
                    android:textAlignment="center"/>

                <RadioButton android:id="@+id/radioPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_change_pin"
                    android:onClick="onRadioButtonClicked"
                    android:textSize="12dp"
                    android:textAlignment="center"/>
            </RadioGroup>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_password_reset"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center_horizontal"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPasswordFormer"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColorHint="@android:color/black"
                android:hint="@string/text_ancien_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordFormer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColorHint="@android:color/black"
                android:hint="@string/text_nouveau_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPasswordConf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColorHint="@android:color/black"
                android:hint="@string/text_confirm_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordConf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:textColorHint="@android:color/black"
                android:hint="@string/text_pin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/validerChange"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/blue"
                android:textColor="#fff"
                android:layout_marginTop="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="valider"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>