<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_m"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/slide_title"
                    android:padding="10dp"/>

                <ImageView
                    android:id="@+id/imageViewScreen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon1"
                    android:layout_marginTop="25dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:textAlignment="center"
                    android:layout_marginBottom="25dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/txt_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/activity_vertical_margin"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/txt_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="@dimen/activity_vertical_margin"
                        android:maxLines="1"
                        android:drawableRight="@drawable/ic_baseline_visibility_24"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/txt_btn_login"
                    android:backgroundTint="@color/blue"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>